objects/AW_Planned_Solution__c.object
<CustomObject>
    <fields>
        <fullName>AW_Automatic_Premium_Increase_ACI__c</fullName>
        <description>Automatic premium Increase of the planned solution</description>
        <label>Automatic Premium Increase (ACI)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_CPI__c</fullName>
        <description>The CPI Percentage</description>
        <label>CPI</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Current_Market_Value__c</fullName>
        <description>The current market value of the solution</description>
        <label>Current Market Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Financial_Goal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the related to Financial Goal</description>
        <label>Goal Name</label>
        <referenceTo>FinServ__FinancialGoal__c</referenceTo>
        <relationshipLabel>Planned Solutions</relationshipLabel>
        <relationshipName>Solutions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AW_Growth_Strategy__c</fullName>
        <description>The growth strategy in brief</description>
        <label>Growth Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Lumpsum_Amount__c</fullName>
        <description>The lumpsum amount of solution</description>
        <label>Lump Sum Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Opportunity_Name__c</fullName>
        <description>The related opportunity</description>
        <label>Opportunity Name</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Planned Solutions</relationshipLabel>
        <relationshipName>Planned_Solutions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AW_Owner_UACFID__c</fullName>
        <description>Unique Liberty ID of the owner of the proposed solution</description>
        <formula>AW_Opportunity_Name__r.Owner.AW_UACFID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner UACFID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_PremiumFrequency__c</fullName>
        <description>How often the premium will be charged of the planned solution</description>
        <label>Premium Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>AW_Frequency</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_Premium_Amount__c</fullName>
        <description>Premium amount of the planned solution</description>
        <label>Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AW_Product_Code__c</fullName>
        <description>Product code of the planned solution</description>
        <label>Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_Product_Name__c</fullName>
        <description>Product name of the planned solution</description>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_RecommendedMultiStratPortfolio__c</fullName>
        <description>Recommended Multi Strat Portfolio based on Growth Strategy , CPI and Target Return</description>
        <formula>IF((AW_Target_Return__c - AW_CPI__c) &gt;= 0.01 &amp;&amp; (AW_Target_Return__c - AW_CPI__c) &lt; 0.02 , &quot;Multi-strategy 1&quot;,
			IF((AW_Target_Return__c - AW_CPI__c) &gt;= 0.02 &amp;&amp; (AW_Target_Return__c - AW_CPI__c) &lt; 0.03, &quot;Multi-strategy 2&quot;,	
						IF((AW_Target_Return__c - AW_CPI__c) &gt;= 0.03 &amp;&amp; (AW_Target_Return__c - AW_CPI__c) &lt; 0.04, &quot;Multi-strategy 3&quot;,
									IF((AW_Target_Return__c - AW_CPI__c) &gt;= 0.04 &amp;&amp; (AW_Target_Return__c - AW_CPI__c) &lt; 0.05, &quot;Multi-strategy 4&quot;,
												IF((AW_Target_Return__c - AW_CPI__c) &gt;= 0.05 &amp;&amp; (AW_Target_Return__c - AW_CPI__c) &lt;= 0.06, &quot;Multi-strategy 5&quot;, &quot;&quot;
														)
											)
								) 
					)
		)</formula>
        <label>Recommended Multi Strat Portfolio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AW_SourceSystemId__c</fullName>
        <description>External ID of the Source System</description>
        <externalId>true</externalId>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_Target_Return__c</fullName>
        <description>The targeted return percentage of solution</description>
        <label>Target Return</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Term_Months__c</fullName>
        <description>Number of Months</description>
        <label>Term (Months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Withdrawal_Annual_Escalation__c</fullName>
        <description>Planned solution yearly withdrawal increase</description>
        <label>Withdrawal Annual Escalation</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Withdrawals__c</fullName>
        <description>Rand value the client withdrawals from their policy</description>
        <label>Withdrawals</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Planned Solution</label>
    <nameField>
        <label>Planned Solution Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planned Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>